Add some new paragraphs to 16.04 est install guide